added active states code

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Work</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
@@ -46,7 +46,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Play</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg class="svg" width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
@@ -60,7 +60,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Study</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
@@ -74,7 +74,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Exercise</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
@@ -88,7 +88,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Social</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
@@ -102,7 +102,7 @@
       <div class="statistic-box__content">
         <h3 class="statistic-box__title">Self Care</h3>
         <div class="statistic-box__ellipsis">
-          <img src="images/icon-ellipsis.svg" alt="ellipsis">
+          <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
         <div class="current-statistic">32hrs</div>
         <div class="previous-statistic">Last Week - 36hrs</div>
