added functionality using js

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </h2>
       </div>
       <ul class="time-frames">
-        <li>Daily</li>
-        <li>Weekly</li>
-        <li>Monthly</li>
+        <li data-action="daily">Daily</li>
+        <li class="active" data-action="weekly">Weekly</li>
+        <li data-action="monthly">Monthly</li>
       </ul>
     </div>
   
@@ -34,8 +34,8 @@
         <div class="statistic-box__ellipsis">
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
 
@@ -48,8 +48,8 @@
         <div class="statistic-box__ellipsis">
           <svg class="svg" width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
 
@@ -62,8 +62,8 @@
         <div class="statistic-box__ellipsis">
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
 
@@ -76,8 +76,8 @@
         <div class="statistic-box__ellipsis">
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
 
@@ -90,8 +90,8 @@
         <div class="statistic-box__ellipsis">
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
 
@@ -104,12 +104,12 @@
         <div class="statistic-box__ellipsis">
           <svg width="21" height="5" xmlns="http://www.w3.org/2000/svg"><path d="M2.5 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Zm8 0a2.5 2.5 0 1 1 0 5 2.5 2.5 0 0 1 0-5Z" fill="#BBC0FF" fill-rule="evenodd"/></svg>
         </div>
-        <div class="current-statistic">32hrs</div>
-        <div class="previous-statistic">Last Week - 36hrs</div>
+        <div class="current-statistic"></div>
+        <div class="previous-statistic"></div>
       </div>
     </div>
     
-
+<script src="script.js"></script>
 </div>
 </body>
 </html>
